<resources>
    <string name="app_name">AUTOLIB</string>
    <string name="get_started">Get Started</string>
    <string name="autolib">AUTOLIB</string>
    <string name="cover_image">cover_image</string>
    <string name="student_login">student_login</string>
    <string name="librarian_login">librarian_login</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="student">Student</string>
    <string name="librarian">Librarian</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member?</string>
    <string name="signup">SignUp</string>
    <string name="enter_you_email_id">Enter your Admission No</string>
</resources>