<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-13dp"
    tools:layout_editor_absoluteY="-6dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_account_type"
        android:textColor="#3187b7"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/student"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:text="@string/librarian"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:backgroundTintMode="multiply"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/student_login"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/student" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/librarian_login"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/librarian" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="341dp"
        android:layout_height="58dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/shape"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/mailIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:maxWidth="48dp"
            android:maxHeight="48dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/mail" />

        <EditText
            android:id="@+id/mailId"
            android:layout_width="281dp"
            android:layout_height="48dp"
            android:layout_marginLeft="6dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_you_email_id"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="341dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/lockIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:maxWidth="48dp"
            android:maxHeight="48dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/lock"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="402dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="281dp"
            android:layout_height="48dp"
            android:layout_marginLeft="6dp"

            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#3186B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3587B6"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>